--- a/light.html
+++ b/light.html
@@ -334,7 +334,7 @@
 </div>
 <!-- Switch style (go to link) -->
 <div class="fab">
-    <a href="/demoprices/" class="fab__button">
+    <a href="https://codewfarrer.github.io/demoprices/" class="fab__button">
         <i class="f7-icons">moon_stars_fill</i>
     </a>
 </div>
